[package]
name = "cluster-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0.71"
log = "0.4"
pretty_env_logger = "0.4"
serde = "1.0"
serde_yaml = "0.9"
chrono = "0.4"
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
kube-client = "0.82.2"
tonic = "0.9"
prost = "0.11"
prost-types = "0.11"
gethostname = "0.4"

[build-dependencies]
tonic-build = "0.8"