[package]
name = "cluster-agent"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0.79"
log = "0.4"
pretty_env_logger = "0.5"
serde = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", default-features = false }
futures = "0.3.30"
kube-client = "0.87.2"
kube-runtime = "0.87.2"
kube = { version = "0.87.2", default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.20.0", features = ["v1_26"] }
tonic = { version = "0.11.0", features = ["transport", "tls", "tls-webpki-roots"] }
prost = "0.12.3"
prost-types = "0.12.3"
gethostname = "0.4"

[build-dependencies]
tonic-build = "0.10.2"
